welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:18: error: not found: value doghouse
  doghouse()
  ^